RESOLVED FIXED187507
REGRESSION (r231510): Dismissing PDFPlugin context menu automatically clicks the first item
https://bugs.webkit.org/show_bug.cgi?id=187507
Summary REGRESSION (r231510): Dismissing PDFPlugin context menu automatically clicks ...
Tim Horton
Reported 2018-07-09 23:04:19 PDT
REGRESSION (r231510): Dismissing PDFPlugin context menu automatically clicks the first item
Attachments
Patch (5.45 KB, patch)
2018-07-09 23:05 PDT, Tim Horton
no flags
Archive of layout-test-results from ews206 for win-future (12.91 MB, application/zip)
2018-07-10 01:40 PDT, EWS Watchlist
no flags
Tim Horton
Comment 1 2018-07-09 23:05:58 PDT
Tim Horton
Comment 2 2018-07-09 23:06:11 PDT
EWS Watchlist
Comment 3 2018-07-10 01:39:54 PDT
Comment on attachment 344670 [details] Patch Attachment 344670 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8491865 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 4 2018-07-10 01:40:06 PDT
Created attachment 344681 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Per Arne Vollan
Comment 5 2018-07-10 08:18:20 PDT
Comment on attachment 344670 [details] Patch Thanks! R=me.
WebKit Commit Bot
Comment 6 2018-07-10 12:21:45 PDT
Comment on attachment 344670 [details] Patch Clearing flags on attachment: 344670 Committed r233694: <https://trac.webkit.org/changeset/233694>
WebKit Commit Bot
Comment 7 2018-07-10 12:21:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.